--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formBuilder": "^3.19.7",
+    "jquery-ui-sortable": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-form-builder2": "^0.16.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
